fix: updated user agent